syntax = "proto3";

option go_package = "proto/computer_iface";


enum ComputerPowerStatus {
    COMPUTER_POWER_UNKNOWN = 0; // 未知状态
    COMPUTER_POWER_OFF = 1; // 关机状态
    COMPUTER_POWER_ON = 2;  // 开机状态
}

enum ComputerOperate {
    COMPUTER_OPERATE_OFF = 0; // 关机
    COMPUTER_OPERATE_ON = 1; // 开机
    COMPUTER_OPERATE_DETECT = 2; // 探测
}

enum ComputerPortProtocol {
    COMPUTER_PORT_PROTCOL_UNKNOWN  = 0;
    COMPUTER_PORT_PROTCOL_FTPDATA = 20;
    COMPUTER_PORT_PROTCOL_FTPCONTROL = 21;
    COMPUTER_PORT_PROTCOL_SSH = 22;
    COMPUTER_PORT_PROTCOL_TELNET = 23;
    COMPUTER_PORT_PROTCOL_SMTP = 25;
    COMPUTER_PORT_PROTCOL_DNS = 53;
    COMPUTER_PORT_PROTCOL_DHCP = 67;
    COMPUTER_PORT_PROTCOL_HTTP = 80;
    COMPUTER_PORT_PROTCOL_POP3 = 110;
    COMPUTER_PORT_PROTCOL_NTP = 123;
    COMPUTER_PORT_PROTCOL_IMAP = 143;
    COMPUTER_PORT_PROTCOL_SNMP = 161;
    COMPUTER_PORT_PROTCOL_HTTPS = 443;
    COMPUTER_PORT_PROTCOL_IPSEC = 500;
    COMPUTER_PORT_PROTCOL_RADIUS = 1645;
    COMPUTER_PORT_PROTCOL_L2TP = 1701;
    COMPUTER_PORT_PROTCOL_PPTP = 1723;
    COMPUTER_PORT_PROTCOL_RDP = 3389;
}

enum ComputerPortTransport {
    COMPUTER_PORT_TRANSPORT_UNKNOWN  = 0;
    COMPUTER_PORT_TRANSPORT_TCP = 1;
    COMPUTER_PORT_TRANSPORT_UDP = 2;
}

enum ComputerPortUseType {
    COMPUTER_PORT_USETYEPE_NONE = 0; // 空
    COMPUTER_PORT_USETYEPE_DETECT = 1; // 网络探测
}